--- a/build
+++ b/build
@@ -1,4 +1,7 @@
 #!/bin/bash
+cd "$(dirname "$0")"
+set -euo pipefail
+
 docker build                     -t spencertipping/machine .
 docker build --build-arg user=me -t spencertipping/guest-machine .
 
